<resources>
    <string name="app_name">Bowling</string>
    <string name="default_web_client_id">454525725941-q6u7lvl6ppamjuhhjnulajj2168nitej.apps.googleusercontent.com</string>
    <string name="email_c_m">Email cím</string>
    <string name="jelsz">Jelszó</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="email">Email</string>
    <string name="vezet_kn_v">Vezetéknév</string>
    <string name="keresztn_v">Keresztnév</string>
    <string name="vissza">Vissza</string>
    <string name="admin">admin</string>
    <string name="f_oldal">Főoldal</string>
    <string name="profil">Profil</string>
    <string name="kil_p_s">Kilépés</string>
    <string name="emailc">Email:</string>
    <string name="uid">UID:</string>
    <string name="dv_z_lj_k_az_oldalon">Üdvözöljük az oldalon!</string>
    <string name="d_tum_yyyy_mm_dd">Dátum (YYYY-MM-DD)</string>
    <string name="id_pont_hh_mm">Időpont (HH:MM)</string>
    <string name="p_lyasz_m">Pályaszám</string>
    <string name="id_pont_hozz_ad_sa">Időpont hozzáadása</string>
    <string name="hozz_ad_s">Hozzáadás</string>
    <string name="lefoglalt_id_pontok_megtekint_se">Lefoglalt időpontok megtekintése</string>
    <string name="k_p_felt_lt_se">Kép feltöltése</string>
    <string name="id_pontok">Időpontok:</string>
    <string name="k_p_k_sz_t_se">Kép készítése</string>
    <string name="profil_t_rl_se">Profil törlése</string>
    <string name="jelsz_m_dos_t_sa">Jelszó módosítása</string>
    <string name="j_jelsz">Új jelszó</string>
</resources>