<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".profile">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k_p_felt_lt_se"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k_p_k_sz_t_se"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keresztn_v"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vezet_kn_v"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/firstNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/j_jelsz"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/lastNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jelsz_m_dos_t_sa"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewBookedSlots"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton"
        app:layout_constraintBottom_toTopOf="@id/deleteProfileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/bookedSlotsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/deleteProfileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/profil_t_rl_se"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
